--- a/admin/views/adminView.ejs
+++ b/admin/views/adminView.ejs
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <title>Detourist Admin</title>
     <link rel="stylesheet" href="/css/admin-style.css">
+
+    <script src="/js/script.js"></script>
 </head>
 
 <body>
 
     <div class="admin-layout">
+        
+        <button id="hamburgerBtn" class="hamburger">&#9776;</button>
+        <div id="sidebarOverlay"></div>
+
         <aside class="admin-sidebar">
             <div class="admin-logo">
                 <img src="/assets/icons/logoD.png" alt="Detourist logo">
