--- a/client/css/style.css
+++ b/client/css/style.css
@@ -373,7 +373,7 @@ a {
   transform: translate(-50%, -50%) scale(1.3);
 }
 
-.zoom-buttons {
+.map-buttons {
   position: absolute;
   top: 100px;
   right: 20px;
@@ -383,7 +383,7 @@ a {
   gap: 10px;
 }
 
-.zoom-buttons button {
+.map-buttons button {
   border: 3px solid #2f4048;
   color: #2f4048;
   background-color: #F8F8FF;
