Add dark-mode class

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -417,6 +417,10 @@ a {
   font-size: 1.8rem;
 }
 
+.dark-mode {
+  filter: invert();
+}
+
 @media (max-width: 1024px) {
   #home {
     flex-direction: column;
